# hdhomerun-linux

./: .gitignore  README.md
.github/workflows/: release.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  security-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: unit-1-backend-foundation-code-generation-plan.md  unit-1-backend-foundation-functional-design-plan.md  unit-1-backend-foundation-infrastructure-design-plan.md  unit-1-backend-foundation-nfr-design-plan.md  unit-1-backend-foundation-nfr-requirements-plan.md  unit-2-device-integration-code-generation-plan.md  unit-2-device-integration-functional-design-plan.md  unit-2-device-integration-infrastructure-design-plan.md  unit-2-device-integration-nfr-design-plan.md  unit-2-device-integration-nfr-requirements-plan.md  unit-2-silicondust-guide-data-plan.md  unit-3-playback-session-code-generation-plan.md  unit-3-playback-session-functional-design-plan.md  unit-3-playback-session-nfr-requirements-plan.md  unit-4-bottom-channel-strip-plan.md  unit-4-client-shell-code-generation-plan.md  unit-4-client-shell-functional-design-plan.md  unit-4-client-shell-infrastructure-design-plan.md  unit-4-client-shell-nfr-design-plan.md  unit-4-client-shell-nfr-requirements-plan.md  unit-4-fullscreen-hotkeys-plan.md  unit-4-icon-controls-plan.md  unit-4-overlay-controls-plan.md  unit-4-volume-channel-remap-plan.md  unit-5-guide-grid-ui-plan.md  unit-5-packaging-runtime-plan.md  unit-6-dvr-domain-foundation-code-generation-plan.md  unit-6-dvr-domain-foundation-functional-design-plan.md  unit-6-dvr-domain-foundation-nfr-design-plan.md  unit-6-dvr-domain-foundation-nfr-requirements-plan.md  unit-7-dvr-library-playback-maintenance-code-generation-plan.md  unit-7-dvr-library-playback-maintenance-functional-design-plan.md  unit-8-dvr-client-workspace-code-generation-plan.md  unit-8-dvr-client-workspace-functional-design-plan.md  unit-9-dvr-integration-hardening-verification-code-generation-plan.md
aidlc-docs/construction/unit-1-backend-foundation/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/unit-1-backend-foundation/infrastructure-design/: deployment-architecture.md  infrastructure-design.md
aidlc-docs/construction/unit-1-backend-foundation/nfr-design/: logical-components.md  nfr-design-patterns.md
aidlc-docs/construction/unit-1-backend-foundation/nfr-requirements/: nfr-requirements.md  tech-stack-decisions.md
aidlc-docs/construction/unit-10-performance-optimization/code/: summary.md
aidlc-docs/construction/unit-11-headless-remote-transcode/code/: summary.md
aidlc-docs/construction/unit-12-headless-cli-service/code/: summary.md
aidlc-docs/construction/unit-13-headless-cli-distribution/code/: summary.md
aidlc-docs/construction/unit-2-device-integration/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/unit-2-device-integration/infrastructure-design/: deployment-architecture.md  infrastructure-design.md
aidlc-docs/construction/unit-2-device-integration/nfr-design/: logical-components.md  nfr-design-patterns.md
aidlc-docs/construction/unit-2-device-integration/nfr-requirements/: nfr-requirements.md  tech-stack-decisions.md
aidlc-docs/construction/unit-3-playback-session/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  story-generation-plan.md  unit-of-work-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: dvr-feature-requirement-verification-questions.md  dvr-feature-requirements.md  requirement-verification-questions.md  requirements.md
aidlc-docs/inception/reverse-engineering/: api-documentation.md  architecture.md  business-overview.md  code-quality-assessment.md  code-structure.md  component-inventory.md  dependencies.md  reverse-engineering-timestamp.md  technology-stack.md
aidlc-docs/inception/user-stories/: personas.md  stories.md
backend/: Cargo.toml  README.md  build.rs
backend/src/: app.rs  dvr.rs  error.rs  guide.rs  lib.rs  main.rs  models.rs  playback.rs  transcode.rs  tuner_limits.rs
backend/src/device/: mod.rs
backend/src/http/: routes.rs  types.rs
backend/src/state/: mod.rs  store.rs
backend/tests/: bootstrap_contract.rs  devices_contract.rs  dvr_contract.rs  guide_contract.rs  lineup_contract.rs  playback_contract.rs  property_state.rs  tuners_contract.rs
client/: CMakeLists.txt  README.md
client/qml/: Main.qml
client/qml/components/: ChannelRail.qml  DiagnosticsDrawer.qml  DvrDeleteDialog.qml  DvrDetailsPanel.qml  DvrRecordingsPanel.qml  DvrRuleEditorDialog.qml  DvrStatusBanner.qml  DvrUpcomingPanel.qml  GuideGrid.qml  IconButton.qml  PlaybackStage.qml  ThemeButton.qml
client/src/: appcontroller.cpp  appcontroller.full.cpp.inc  appcontroller.h  backendlaunchconfig.cpp  backendlaunchconfig.h  channelnavigation.cpp  channelnavigation.h  dvrworkspacehelpers.cpp  dvrworkspacehelpers.h  idleinhibitor.cpp  idleinhibitor.h  main.cpp
client/tests/: backendlaunchconfig_tests.cpp  channelnavigation_tests.cpp  dvrworkspacehelpers_tests.cpp
packaging/: README.md  build-and-verify-dist.sh  deploy-backend-to-pi.sh
packaging/appimage/: AppRun  README.md  build-appimage.sh
packaging/common/: build-release-binaries.sh  check-host-dependencies.sh  export-runtime-env.sh  hdhomerun-linux-player.desktop  io.github.e88z4.HDHomeRunLinuxPlayer.appdata.xml  smoke-test-runtime.sh
packaging/debian/: README.md  build-deb.sh  control
packaging/flatpak/: README.md  build-flatpak.sh  hdhomerun-linux-player-wrapper.sh  io.github.e88z4.HDHomeRunLinuxPlayer.yaml
(+49 files in other folders)
